--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,7 +1,15 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.MeetupSync" parent="Theme.Material3.DayNight.NoActionBar">
-
+        <item name="colorPrimary">#308CC9</item>
+        <item name="colorPrimaryVariant">#308CC9</item>
+        <item name="colorOnPrimary">@color/white</item>
+        <!-- Secondary brand color. -->
+        <item name="colorSecondary">#308CC9</item>
+        <item name="colorSecondaryVariant">#308CC9</item>
+        <item name="colorOnSecondary">#308CC9</item>
+        <!-- Status bar color. -->
+        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
     </style>
 
     <style name="Theme.MeetupSync" parent="Base.Theme.MeetupSync" />
