1. полноценная страница входа 2. Дизайн 3.Генерация пароля 4. Добавлено поле Логин 5. Мелкие исправления

--- a/app/src/main/res/layout/activity_add_password.xml
+++ b/app/src/main/res/layout/activity_add_password.xml
@@ -12,10 +12,25 @@
         android:hint="Сервис" />
 
     <EditText
+        android:id="@+id/loginEditText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Логин" />
+
+    <EditText
         android:id="@+id/passwordEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Пароль" />
+
+    <Button
+        android:id="@+id/randomButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="16dp"
+        android:text="Создать уникальный пароль"
+        android:backgroundTint="@color/берюзовый"/>
 
     <Button
         android:id="@+id/saveButton"
@@ -23,6 +38,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="16dp"
-        android:text="Сохранить" />
+        android:text="Сохранить"
+        android:backgroundTint="@color/берюзовый"/>
 
 </LinearLayout>
