--- a/app/src/main/res/layout/activity_password_details.xml
+++ b/app/src/main/res/layout/activity_password_details.xml
@@ -14,11 +14,18 @@
         android:textStyle="bold" />
 
     <TextView
+        android:id="@+id/loginTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:layout_marginTop="15dp"/>
+
+    <TextView
         android:id="@+id/passwordTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="18sp"
-        android:layout_marginTop="16dp" />
+        android:textSize="20sp"
+        android:layout_marginTop="15dp" />
 
     <Button
         android:id="@+id/copyButton"
