--- a/app/src/main/res/layout/activity_pin_code.xml
+++ b/app/src/main/res/layout/activity_pin_code.xml
@@ -1,32 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingLeft="16dp"
-    android:paddingTop="16dp"
-    android:paddingRight="16dp"
-    android:paddingBottom="16dp"
-    tools:context=".PinCodeActivity">
+xmlns:tools="http://schemas.android.com/tools"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+android:paddingLeft="16dp"
+android:paddingTop="16dp"
+android:paddingRight="16dp"
+android:paddingBottom="16dp"
+tools:context=".PinCodeActivity">
+
+<ImageView
+    android:id="@+id/logoImageView"
+    android:layout_width="300dp"
+    android:layout_height="wrap_content"
+    android:layout_centerHorizontal="true"
+    android:src="@drawable/logo" />
 
     <EditText
         android:id="@+id/pinCodeEditText"
         android:layout_width="96dp"
         android:layout_height="56dp"
         android:layout_centerInParent="true"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="9dp"
         android:background="@drawable/edittext_border"
         android:gravity="center_vertical|center_horizontal"
         android:inputType="numberPassword"
         android:maxLength="4"
         android:textSize="30dp" />
 
-    <Button
-        android:id="@+id/submitButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/pinCodeEditText"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="16dp"
-        android:text="ВОЙТИ" />
+<Button
+    android:id="@+id/submitButton"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_below="@id/pinCodeEditText"
+    android:layout_centerHorizontal="true"
+    android:layout_marginTop="0dp"
+    android:text="ВОЙТИ"
+    android:background="@drawable/button_border"
+    android:fontFamily="sans-serif-thin"
+    android:textStyle="bold"
+    android:textColor="@color/white"/>
+
+
+<TextView
+    android:id="@+id/titleTextView"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_above="@id/pinCodeEditText"
+    android:layout_centerHorizontal="true"
+    android:text="PassMaster"
+    android:textSize="40sp"
+    android:fontFamily="sans-serif-thin"
+    android:textStyle="italic"
+    android:textColor="@color/white"/>
+
 
 </RelativeLayout>
+
