--- a/app/src/main/res/layout/activity_password_details.xml
+++ b/app/src/main/res/layout/activity_password_details.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="24sp"
-        android:textStyle="bold" />
+        android:textColor="@color/берюзовый"/>
 
     <TextView
         android:id="@+id/loginTextView"
@@ -34,5 +34,13 @@
         android:layout_marginTop="16dp"
         android:backgroundTint="@color/берюзовый"
         android:text="Скопировать пароль" />
+
+    <Button
+        android:id="@+id/deleteButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:backgroundTint="#ED3C42"
+        android:text="Удалить карточку" />
 
 </LinearLayout>
