--- a/app/src/main/res/layout/list_item_password.xml
+++ b/app/src/main/res/layout/list_item_password.xml
@@ -18,4 +18,16 @@
         android:textSize="20sp"
         android:textStyle="bold"/>
 
+    <TextView
+        android:id="@+id/loginTextView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:visibility="gone"/>
+
+    <TextView
+        android:id="@+id/passwordTextView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:visibility="gone"/>
+
 </LinearLayout>
