--- a/app/src/main/res/layout/activity_password_details.xml
+++ b/app/src/main/res/layout/activity_password_details.xml
@@ -11,21 +11,24 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="24sp"
-        android:textColor="@color/берюзовый"/>
+        android:textColor="@color/берюзовый"
+        android:fontFamily="sans-serif-thin"/>
 
     <TextView
         android:id="@+id/loginTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="20sp"
-        android:layout_marginTop="15dp"/>
+        android:layout_marginTop="15dp"
+        android:fontFamily="sans-serif-thin"/>
 
     <TextView
         android:id="@+id/passwordTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="20sp"
-        android:layout_marginTop="15dp" />
+        android:layout_marginTop="15dp"
+        android:fontFamily="sans-serif-thin"/>
 
     <Button
         android:id="@+id/copyButton"
@@ -33,7 +36,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:backgroundTint="@color/берюзовый"
-        android:text="Скопировать пароль" />
+        android:text="Скопировать пароль"
+        android:fontFamily="sans-serif-thin"/>
 
     <Button
         android:id="@+id/deleteButton"
@@ -41,6 +45,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:backgroundTint="#ED3C42"
-        android:text="Удалить карточку" />
+        android:text="Удалить карточку"
+        android:fontFamily="sans-serif-thin"/>
 
 </LinearLayout>
