--- a/app/src/main/res/layout/activity_add_password.xml
+++ b/app/src/main/res/layout/activity_add_password.xml
@@ -9,19 +9,22 @@
         android:id="@+id/serviceEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Сервис" />
+        android:hint="Сервис"
+        android:fontFamily="sans-serif-thin"/>
 
     <EditText
         android:id="@+id/loginEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Логин" />
+        android:hint="Логин"
+        android:fontFamily="sans-serif-thin"/>
 
     <EditText
         android:id="@+id/passwordEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Пароль" />
+        android:hint="Пароль"
+        android:fontFamily="sans-serif-thin"/>
 
     <Button
         android:id="@+id/randomButton"
@@ -30,7 +33,8 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="16dp"
         android:text="Создать уникальный пароль"
-        android:backgroundTint="@color/берюзовый"/>
+        android:backgroundTint="@color/берюзовый"
+        android:fontFamily="sans-serif-thin"/>
 
     <Button
         android:id="@+id/saveButton"
@@ -39,6 +43,7 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="16dp"
         android:text="Сохранить"
-        android:backgroundTint="@color/берюзовый"/>
+        android:backgroundTint="@color/берюзовый"
+        android:fontFamily="sans-serif-thin"/>
 
 </LinearLayout>
