изменены иконки + шрифты допилены

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:hint="Поиск пароля"
-            android:fontFamily="sans-serif-thin"/>
+            android:fontFamily="sans-serif"/>
 
         <Button
             android:id="@+id/searchButton"
@@ -26,7 +26,7 @@
             android:layout_marginRight="10dp"
             android:text="Найти"
             android:backgroundTint="@color/берюзовый"
-            android:fontFamily="sans-serif-thin"/>
+            android:fontFamily="sans-serif"/>
 
     </RelativeLayout>
 
@@ -58,6 +58,6 @@
         android:layout_marginTop="20dp"
         android:text="Добавить пароль"
         android:backgroundTint="@color/берюзовый"
-        android:fontFamily="sans-serif-thin"/>
+        android:fontFamily="sans-serif"/>
 
 </LinearLayout>
