--- a/app/src/main/res/layout/activity_password_details.xml
+++ b/app/src/main/res/layout/activity_password_details.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:textSize="24sp"
         android:textColor="@color/берюзовый"
-        android:fontFamily="sans-serif-thin"/>
+        android:fontFamily="sans-serif"/>
 
     <TextView
         android:id="@+id/loginTextView"
@@ -20,7 +20,7 @@
         android:layout_height="wrap_content"
         android:textSize="20sp"
         android:layout_marginTop="15dp"
-        android:fontFamily="sans-serif-thin"/>
+        android:fontFamily="sans-serif"/>
 
     <TextView
         android:id="@+id/passwordTextView"
@@ -28,7 +28,7 @@
         android:layout_height="wrap_content"
         android:textSize="20sp"
         android:layout_marginTop="15dp"
-        android:fontFamily="sans-serif-thin"/>
+        android:fontFamily="sans-serif"/>
 
     <Button
         android:id="@+id/copyButton"
@@ -37,7 +37,7 @@
         android:layout_marginTop="16dp"
         android:backgroundTint="@color/берюзовый"
         android:text="Скопировать пароль"
-        android:fontFamily="sans-serif-thin"/>
+        android:fontFamily="sans-serif"/>
 
     <Button
         android:id="@+id/deleteButton"
@@ -46,6 +46,6 @@
         android:layout_marginTop="16dp"
         android:backgroundTint="#ED3C42"
         android:text="Удалить карточку"
-        android:fontFamily="sans-serif-thin"/>
+        android:fontFamily="sans-serif"/>
 
 </LinearLayout>
