--- a/app/src/main/res/layout/activity_add_password.xml
+++ b/app/src/main/res/layout/activity_add_password.xml
@@ -10,21 +10,21 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Сервис"
-        android:fontFamily="sans-serif-thin"/>
+        android:fontFamily="sans-serif"/>
 
     <EditText
         android:id="@+id/loginEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Логин"
-        android:fontFamily="sans-serif-thin"/>
+        android:fontFamily="sans-serif"/>
 
     <EditText
         android:id="@+id/passwordEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Пароль"
-        android:fontFamily="sans-serif-thin"/>
+        android:fontFamily="sans-serif"/>
 
     <Button
         android:id="@+id/randomButton"
@@ -34,7 +34,7 @@
         android:layout_marginTop="16dp"
         android:text="Создать уникальный пароль"
         android:backgroundTint="@color/берюзовый"
-        android:fontFamily="sans-serif-thin"/>
+        android:fontFamily="sans-serif"/>
 
     <Button
         android:id="@+id/saveButton"
@@ -44,6 +44,6 @@
         android:layout_marginTop="16dp"
         android:text="Сохранить"
         android:backgroundTint="@color/берюзовый"
-        android:fontFamily="sans-serif-thin"/>
+        android:fontFamily="sans-serif"/>
 
 </LinearLayout>
