--- a/app/src/main/res/layout/activity_add_password.xml
+++ b/app/src/main/res/layout/activity_add_password.xml
@@ -43,7 +43,7 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="16dp"
         android:text="Сохранить"
-        android:backgroundTint="@color/берюзовый"
+        android:backgroundTint="#4CAF50"
         android:fontFamily="sans-serif"/>
 
 </LinearLayout>
