--- a/app/src/main/res/layout/activity_add_password.xml
+++ b/app/src/main/res/layout/activity_add_password.xml
@@ -26,6 +26,13 @@
         android:hint="Пароль"
         android:fontFamily="sans-serif"/>
 
+    <EditText
+    android:id="@+id/commentEditText"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:hint="Комментарий"
+    android:fontFamily="sans-serif"/>
+
     <Button
         android:id="@+id/randomButton"
         android:layout_width="wrap_content"
