--- a/app/src/main/res/layout/activity_password_details.xml
+++ b/app/src/main/res/layout/activity_password_details.xml
@@ -37,6 +37,14 @@
         android:layout_marginTop="15dp"
         android:fontFamily="sans-serif"/>
 
+    <TextView
+        android:id="@+id/commentTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:layout_marginTop="15dp"
+        android:fontFamily="sans-serif"/>
+
     <Button
         android:id="@+id/copyButton"
         android:layout_width="wrap_content"
