--- a/app/src/main/res/layout/list_item_password.xml
+++ b/app/src/main/res/layout/list_item_password.xml
@@ -31,4 +31,10 @@
         android:layout_height="0dp"
         android:visibility="gone"/>
 
+    <TextView
+        android:id="@+id/commentTextView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:visibility="gone"/>
+
 </LinearLayout>
