мелкие исправления дизайна

--- a/app/src/main/res/layout/activity_password_details.xml
+++ b/app/src/main/res/layout/activity_password_details.xml
@@ -15,35 +15,39 @@
 
     <TextView
         android:id="@+id/serviceTextView"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="24sp"
-        android:textColor="@color/берюзовый"
-        android:fontFamily="sans-serif"/>
+        android:textSize="20sp"
+        android:layout_marginTop="15dp"
+        android:fontFamily="sans-serif"
+        android:gravity="center" />
 
     <TextView
         android:id="@+id/loginTextView"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="20sp"
         android:layout_marginTop="15dp"
-        android:fontFamily="sans-serif"/>
+        android:fontFamily="sans-serif"
+        android:gravity="center" />
 
     <TextView
         android:id="@+id/passwordTextView"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="20sp"
         android:layout_marginTop="15dp"
-        android:fontFamily="sans-serif"/>
+        android:fontFamily="sans-serif"
+        android:gravity="center" />
 
     <TextView
         android:id="@+id/commentTextView"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="20sp"
         android:layout_marginTop="15dp"
-        android:fontFamily="sans-serif"/>
+        android:fontFamily="sans-serif"
+        android:gravity="center" />
 
     <Button
         android:id="@+id/copyButton"
