--- a/app/src/main/res/layout/activity_password_details.xml
+++ b/app/src/main/res/layout/activity_password_details.xml
@@ -20,7 +20,8 @@
         android:textSize="20sp"
         android:layout_marginTop="15dp"
         android:fontFamily="sans-serif"
-        android:gravity="center" />
+        android:gravity="center"
+        android:textColor="@color/берюзовый"/>
 
     <TextView
         android:id="@+id/loginTextView"
