--- a/app/src/main/res/layout/activity_password_details.xml
+++ b/app/src/main/res/layout/activity_password_details.xml
@@ -23,6 +23,13 @@
         android:gravity="center"
         android:textColor="@color/берюзовый"/>
 
+    <ProgressBar
+        android:id="@+id/loadingProgressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:textColor="@color/берюзовый"/>
+
     <TextView
         android:id="@+id/loginTextView"
         android:layout_width="match_parent"
