Добавлены метки при создании карточки

--- a/app/src/main/res/layout/activity_add_password.xml
+++ b/app/src/main/res/layout/activity_add_password.xml
@@ -44,6 +44,16 @@
         android:fontFamily="sans-serif"/>
 
     <Button
+        android:id="@+id/labelButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="16dp"
+        android:text="Добавить метку"
+        android:backgroundTint="#FB7246"
+        android:fontFamily="sans-serif"/>
+
+    <Button
         android:id="@+id/saveButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
