--- a/app/src/main/res/layout/list_item_password.xml
+++ b/app/src/main/res/layout/list_item_password.xml
@@ -11,13 +11,36 @@
         android:layout_height="0dp"
         android:visibility="gone" />
 
-    <TextView
-        android:id="@+id/serviceTextView"
+    <LinearLayout
+        android:id="@+id/buttonLayout1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        android:fontFamily="sans-serif-thin"/>
+        android:orientation="horizontal"
+        android:layout_marginTop="1dp"
+        android:layout_marginBottom="5dp"
+        android:gravity="end">
+
+        <TextView
+            android:id="@+id/serviceTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:fontFamily="sans-serif-thin"/>
+
+        <Space
+            android:layout_width="0dp"
+            android:layout_height="1dp"
+            android:layout_weight="1"/>
+
+        <TextView
+            android:id="@+id/labelTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:fontFamily="sans-serif-thin"/>
+    </LinearLayout>
 
     <TextView
         android:id="@+id/loginTextView"
