--- a/app/src/main/res/layout/activity_password_details.xml
+++ b/app/src/main/res/layout/activity_password_details.xml
@@ -14,6 +14,16 @@
         android:visibility="gone"/>
 
     <TextView
+        android:id="@+id/labelTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:layout_marginTop="15dp"
+        android:fontFamily="sans-serif"
+        android:gravity="center"
+        android:textColor="@color/берюзовый"/>
+
+    <TextView
         android:id="@+id/serviceTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
