--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="grey">#3A3939</color>
     <color name="teal_200">#FF018786</color>
     <color name="берюзовый">#FF2493F8</color>
+    <color name="персиковый">#FFFB7246</color>
 </resources>
