--- a/app/src/main/res/layout/list_item_password.xml
+++ b/app/src/main/res/layout/list_item_password.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -13,51 +12,70 @@
 
     <LinearLayout
         android:id="@+id/buttonLayout1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:layout_width="380dp"
+        android:layout_height="50dp"
         android:layout_marginTop="1dp"
         android:layout_marginBottom="5dp"
-        android:gravity="end">
+        android:gravity="end"
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/serviceTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-thin"
             android:textSize="20sp"
-            android:textStyle="bold"
-            android:fontFamily="sans-serif-thin"/>
+            android:textStyle="bold" />
 
         <Space
             android:layout_width="0dp"
             android:layout_height="1dp"
-            android:layout_weight="1"/>
+            android:layout_weight="1" />
 
-        <TextView
-            android:id="@+id/labelTextView"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="163dp"
             android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            android:fontFamily="sans-serif-thin"/>
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/labelImageView"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:contentDescription="@null"
+                android:src="@drawable/label_blue" />
+
+
+            <TextView
+                android:id="@+id/labelTextView"
+                android:layout_width="135dp"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="10dp"
+                android:fontFamily="sans-serif-thin"
+                android:maxWidth="280dp"
+                android:text=""
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+        </LinearLayout>
+
     </LinearLayout>
 
     <TextView
         android:id="@+id/loginTextView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:visibility="gone"/>
+        android:visibility="gone" />
 
     <TextView
         android:id="@+id/passwordTextView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:visibility="gone"/>
+        android:visibility="gone" />
 
     <TextView
         android:id="@+id/commentTextView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:visibility="gone"/>
+        android:visibility="gone" />
 
 </LinearLayout>
