мелкие исправления дизайна

--- a/app/src/main/res/drawable/color_picker_button.xml
+++ b/app/src/main/res/drawable/color_picker_button.xml
@@ -6,6 +6,6 @@
         android:centerX="0.5"
         android:centerY="0.5"
         android:startColor="#FFFFFF"
-        android:endColor="#000000"
+        android:endColor="@color/персиковый"
         android:gradientRadius="45%" />
 </shape>
