--- a/app/src/main/res/layout/activity_add_password.xml
+++ b/app/src/main/res/layout/activity_add_password.xml
@@ -50,7 +50,7 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="16dp"
         android:text="Добавить метку"
-        android:backgroundTint="#FB7246"
+        android:backgroundTint="@color/персиковый"
         android:fontFamily="sans-serif"/>
 
     <Button
