--- a/app/src/main/res/layout/activity_password_details.xml
+++ b/app/src/main/res/layout/activity_password_details.xml
@@ -20,8 +20,7 @@
         android:textSize="20sp"
         android:layout_marginTop="15dp"
         android:fontFamily="sans-serif"
-        android:gravity="center"
-        android:textColor="@color/берюзовый"/>
+        android:gravity="center"/>
 
     <TextView
         android:id="@+id/serviceTextView"
