--- a/app/src/main/res/layout/dialog_add_label.xml
+++ b/app/src/main/res/layout/dialog_add_label.xml
@@ -42,7 +42,7 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="16dp"
         android:text="Добавить метку"
-        android:backgroundTint="#FB7246"
+        android:backgroundTint="@color/персиковый"
         android:fontFamily="sans-serif"/>
 
 </LinearLayout>
