--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,31 +4,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="16dp"
+    android:padding="5dp"
     tools:context=".MainActivity">
 
-    <RelativeLayout
+    <SearchView
+        android:id="@+id/searchView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <EditText
-            android:id="@+id/searchEditText"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:hint="Поиск пароля"
-            android:fontFamily="sans-serif"/>
-
-        <Button
-            android:id="@+id/searchButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="10dp"
-            android:text="Найти"
-            android:backgroundTint="@color/берюзовый"
-            android:fontFamily="sans-serif"/>
-
-    </RelativeLayout>
+        android:layout_height="wrap_content"
+        android:iconifiedByDefault="false"
+        android:fontFamily="sans-serif"
+        android:queryHint="Поиск" />
 
     <ScrollView
         android:layout_width="match_parent"
