--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,6 +2,7 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.MeetupSync" parent="Theme.Material3.DayNight.NoActionBar">
         <item name="colorPrimary">#FBFDFF</item>
+        <item name="android:textColor">@color/black</item>
         <item name="colorPrimaryVariant">@color/берюзовый</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
@@ -12,7 +13,6 @@
         <item name="android:statusBarColor">@color/берюзовый</item>
         <item name="android:navigationBarColor">@color/персиковый</item>
         <item name="android:windowLightNavigationBar">true</item>
-
     </style>
 
     <style name="Theme.MeetupSync" parent="Base.Theme.MeetupSync" />
