shity ui but top security update

--- a/app/src/main/res/layout/activity_password_details.xml
+++ b/app/src/main/res/layout/activity_password_details.xml
@@ -15,21 +15,21 @@
 
     <TextView
         android:id="@+id/labelTextView"
-        android:layout_width="match_parent"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:layout_marginTop="15dp"
+        android:layout_margin="15dp"
         android:fontFamily="sans-serif"
-        android:gravity="center"/>
+        android:gravity="end"
+        android:textSize="20sp" />
 
     <TextView
         android:id="@+id/serviceTextView"
-        android:layout_width="match_parent"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:textSize="20sp"
-        android:layout_marginTop="15dp"
+        android:layout_margin="15dp"
         android:fontFamily="sans-serif"
-        android:gravity="center"
+        android:gravity="end"
         android:textColor="@color/берюзовый"/>
 
     <ProgressBar
@@ -41,30 +41,30 @@
 
     <TextView
         android:id="@+id/loginTextView"
-        android:layout_width="match_parent"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:textSize="20sp"
-        android:layout_marginTop="15dp"
+        android:layout_margin="15dp"
         android:fontFamily="sans-serif"
-        android:gravity="center" />
+        android:gravity="end" />
 
     <TextView
         android:id="@+id/passwordTextView"
-        android:layout_width="match_parent"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:layout_marginTop="15dp"
+        android:layout_margin="15dp"
         android:fontFamily="sans-serif"
-        android:gravity="center" />
+        android:gravity="end"
+        android:textSize="20sp" />
 
     <TextView
         android:id="@+id/commentTextView"
-        android:layout_width="match_parent"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:layout_marginTop="15dp"
+        android:layout_margin="15dp"
         android:fontFamily="sans-serif"
-        android:gravity="center" />
+        android:gravity="end"
+        android:textSize="20sp" />
 
     <Button
         android:id="@+id/copyButton"
