--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="teal_200">#FF018786</color>
     <color name="берюзовый">#FF2493F8</color>
     <color name="персиковый">#FFFB7246</color>
+    <color name="textColor">#FF000000</color>
 </resources>
